--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-apexcharts": "1.4.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "7.52.0",
+    "swiper": "^11.2.6",
     "zod": "3.23.8"
   },
   "devDependencies": {
