--- a/server/hopon_hopoff/requirements.txt
+++ b/server/hopon_hopoff/requirements.txt
@@ -1,7 +1,16 @@
 asgiref==3.8.1
+attrs==25.3.0
 Django==5.1.7
 djangorestframework==3.15.2
+drf-spectacular==0.28.0
+inflection==0.5.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 pillow==11.2.1
 psycopg2-binary==2.9.10
+PyYAML==6.0.2
+referencing==0.36.2
+rpds-py==0.24.0
 sqlparse==0.5.3
 tzdata==2025.2
+uritemplate==4.1.1
