--- a/server/hopon_hopoff/requirements.txt
+++ b/server/hopon_hopoff/requirements.txt
@@ -8,6 +8,7 @@ jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 pillow==11.2.1
 psycopg2-binary==2.9.10
+python-dotenv==1.1.0
 PyYAML==6.0.2
 referencing==0.36.2
 rpds-py==0.24.0
