--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,63 @@
+# Python bytecode
+*.py[cod]
+__pycache__/
+*.so
+
+# Django stuff
+*.log
+*.pot
 *.pyc
-.vscode/*
+*.pyo
+*.sqlite3
+db.sqlite3
+media/
+staticfiles/
+
+# Environment variables
+.env
+*.env
+
+# Virtual environments
+venv/
+env/
+ENV/
+.venv/
+.ENV/
 local.env
-***.env.***
+
+# VS Code settings
+.vscode/
+
+# PyCharm settings
+.idea/
+
+# Migrations
+**/migrations/*.py
+!**/migrations/__init__.py
+
+# Node.js dependencies (if using frontend tools)
+node_modules/
+npm-debug.log
+yarn-error.log
+
+# Coverage reports
+htmlcov/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+
+# Test and debug files
+.tox/
+.pytest_cache/
+*.log
+debug.log
+
+# Build files
+build/
+dist/
+*.egg-info/
+.eggs/
